<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/switch_try_again">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_coffee_name" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:autofillHints="@string/coffee_name"/>
    <TextView
            android:text="@string/coffee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_coffee_name"
            app:layout_constraintTop_toTopOf="@+id/text_coffee_name"
            app:layout_constraintBottom_toBottomOf="@+id/text_coffee_name"
            app:layout_constraintEnd_toStartOf="@+id/text_coffee_name" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:labelFor="@id/text_coffee_name"/>
    <TextView
            android:text="@string/coffee_roaster_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_roaster_name"
            app:layout_constraintTop_toTopOf="@+id/text_roaster_name"
            app:layout_constraintBottom_toBottomOf="@+id/text_roaster_name"
            app:layout_constraintEnd_toStartOf="@+id/text_roaster_name" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:labelFor="@id/text_roaster_name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_roaster_name" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_coffee_name" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints="@string/coffee_roaster_name"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_save_coffee"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/switch2" android:backgroundTint="@android:color/holo_green_dark"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel_coffee"
            app:layout_constraintEnd_toStartOf="@+id/button_save_coffee"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/switch2" android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/background_light"/>
    <Switch
            android:text="@string/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_roaster_name"/>
</android.support.constraint.ConstraintLayout>